# microservaluno/server/api/controllers/faculdade/router.ts
@@ -1,0 +1,11 @@
+import express from 'express';
+import controller from './faculdadecontroller';
+
+export default express
+    .Router()
+    .get('/', controller.all)
+    .get('/:id', controller.getById)
+    .post('/', controller.post)
+    .put('/:id', controller.update)
+    .delete('/:id', controller.delete)
+    .post('/event', controller.updateEvent);
