# microservaluno/server/common/api.yml
@@ -38,6 +38,39 @@ paths:
         200:
           description: Return all
           content: {}
+  /faculdade:
+    get:
+      responses:
+        200:
+          description: Return all
+          content: {}
+    post:
+      responses:
+          200:
+            description: Return all
+            content: {}
+  /faculdade/{id}:
+    get:
+      responses:
+        200:
+          description: Return all
+          content: {}
+    put:
+      responses:
+        200:
+          description: Return all
+          content: {}
+    delete:
+      responses:
+        200:
+          description: Return all
+          content: {}
+  /faculdade/event:
+    post:
+      responses:
+        200:
+          description: Return all
+          content: {}
   /examples:
     get:
       tags:
